--- a/apps/webauthn-nestjs/project.json
+++ b/apps/webauthn-nestjs/project.json
@@ -5,10 +5,31 @@
 	"projectType": "application",
 	"tags": [],
 	"targets": {
+		"build": {
+			"executor": "@nx/webpack:webpack",
+			"outputs": [
+				"{options.outputPath}"
+			],
+			"defaultConfiguration": "production",
+			"options": {
+				"target": "node",
+				"compiler": "tsc",
+				"outputPath": "dist/apps/webauthn-nestjs",
+				"main": "apps/webauthn-nestjs/src/main.ts",
+				"tsConfig": "apps/webauthn-nestjs/tsconfig.app.json",
+				"assets": [
+					"apps/webauthn-nestjs/src/assets"
+				],
+				"webpackConfig": "apps/webauthn-nestjs/webpack.config.js"
+			},
+			"configurations": {
+				"development": {},
+				"production": {}
+			}
+		},
 		"serve": {
 			"executor": "@nx/js:node",
 			"defaultConfiguration": "development",
-			"dependsOn": ["build"],
 			"options": {
 				"buildTarget": "webauthn-nestjs:build",
 				"runBuildTargetDependencies": false
@@ -24,7 +45,9 @@
 		},
 		"test": {
 			"executor": "@nx/jest:jest",
-			"outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+			"outputs": [
+				"{workspaceRoot}/coverage/{projectRoot}"
+			],
 			"options": {
 				"jestConfig": "apps/webauthn-nestjs/jest.config.ts"
 			}
