--- a/apps/webauthn-nestjs/tsconfig.json
+++ b/apps/webauthn-nestjs/tsconfig.json
@@ -11,6 +11,12 @@
 		}
 	],
 	"compilerOptions": {
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"baseUrl": ".",
+		"paths": {
+			"@core/*": ["src/app/core/*"],
+			"@/*": ["src/app/modules/*"],
+			"@skyzerozx/shared-interfaces": ["../../libs/shared-interfaces/src/index.ts"]
+		}
 	}
 }
