--- a/package.json
+++ b/package.json
@@ -15,61 +15,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~18.2.4",
-    "@angular/cdk": "^18.2.4",
-    "@angular/common": "~18.2.4",
-    "@angular/compiler": "~18.2.4",
-    "@angular/core": "~18.2.4",
-    "@angular/forms": "~18.2.4",
-    "@angular/material": "^18.2.4",
-    "@angular/platform-browser": "~18.2.4",
-    "@angular/platform-browser-dynamic": "~18.2.4",
-    "@angular/router": "~18.2.4",
-    "@nestjs/cache-manager": "^2.2.2",
-    "@nestjs/common": "^10.4.1",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.4.1",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.1",
-    "@nestjs/swagger": "^7.4.0",
-    "@nestjs/typeorm": "^10.0.2",
+    "@angular/animations": "18.2.4",
+    "@angular/cdk": "18.2.4",
+    "@angular/common": "18.2.4",
+    "@angular/compiler": "18.2.4",
+    "@angular/core": "18.2.4",
+    "@angular/forms": "18.2.4",
+    "@angular/material": "18.2.4",
+    "@angular/platform-browser": "18.2.4",
+    "@angular/platform-browser-dynamic": "18.2.4",
+    "@angular/router": "18.2.4",
+    "@nestjs/cache-manager": "2.2.2",
+    "@nestjs/common": "10.4.1",
+    "@nestjs/config": "3.2.3",
+    "@nestjs/core": "10.4.1",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "10.4.1",
+    "@nestjs/swagger": "7.4.0",
+    "@nestjs/typeorm": "10.0.2",
     "@nx/angular": "19.7.2",
-    "@simplewebauthn/browser": "^10.0.0",
-    "@simplewebauthn/server": "^10.0.1",
-    "axios": "^1.7.7",
-    "bcryptjs": "^2.4.3",
-    "cache-manager-redis-store": "^3.0.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "ioredis": "^5.4.1",
-    "mysql2": "^3.11.2",
-    "nest-winston": "^1.9.7",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "pg": "^8.12.0",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "~7.8.1",
-    "tslib": "^2.7.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "zone.js": "~0.14.10"
+    "@simplewebauthn/browser": "10.0.0",
+    "@simplewebauthn/server": "10.0.1",
+    "axios": "1.7.7",
+    "bcryptjs": "2.4.3",
+    "cache-manager": "5.7.6",
+    "cache-manager-redis-store": "3.0.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
+    "cors": "2.8.5",
+    "helmet": "7.1.0",
+    "ioredis": "5.4.1",
+    "mysql2": "3.11.2",
+    "nest-winston": "1.9.7",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
+    "pg": "8.12.0",
+    "reflect-metadata": "0.2.2",
+    "rxjs": "7.8.1",
+    "tslib": "2.7.0",
+    "winston-daily-rotate-file": "5.0.0",
+    "zone.js": "0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.2.4",
-    "@angular-devkit/core": "~18.2.4",
-    "@angular-devkit/schematics": "~18.2.4",
-    "@angular-eslint/eslint-plugin": "^18.3.1",
-    "@angular-eslint/eslint-plugin-template": "^18.3.1",
-    "@angular-eslint/template-parser": "^18.3.1",
-    "@angular/cli": "~18.2.4",
-    "@angular/compiler-cli": "~18.2.4",
-    "@angular/language-service": "~18.2.4",
-    "@iconify-json/tabler": "^1.2.2",
-    "@iconify/tailwind": "^1.1.3",
-    "@nestjs/schematics": "^10.1.4",
-    "@nestjs/testing": "^10.4.1",
+    "@angular-devkit/build-angular": "18.2.4",
+    "@angular-devkit/core": "18.2.4",
+    "@angular-devkit/schematics": "18.2.4",
+    "@angular-eslint/eslint-plugin": "18.3.1",
+    "@angular-eslint/eslint-plugin-template": "18.3.1",
+    "@angular-eslint/template-parser": "18.3.1",
+    "@angular/cli": "18.2.4",
+    "@angular/compiler-cli": "18.2.4",
+    "@angular/language-service": "18.2.4",
+    "@iconify-json/tabler": "1.2.2",
+    "@iconify/tailwind": "1.1.3",
+    "@nestjs/schematics": "10.1.4",
+    "@nestjs/testing": "10.4.1",
     "@nx/cypress": "19.7.2",
     "@nx/esbuild": "19.7.2",
     "@nx/eslint": "19.7.2",
@@ -81,39 +82,39 @@
     "@nx/web": "19.7.2",
     "@nx/webpack": "19.7.2",
     "@nx/workspace": "19.7.2",
-    "@schematics/angular": "~18.2.4",
-    "@simplewebauthn/types": "^10.0.0",
-    "@swc-node/register": "~1.10.9",
-    "@swc/core": "~1.7.26",
-    "@swc/helpers": "~0.5.13",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@schematics/angular": "18.2.4",
+    "@simplewebauthn/types": "10.0.0",
+    "@swc-node/register": "1.10.9",
+    "@swc/core": "1.7.26",
+    "@swc/helpers": "0.5.13",
+    "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/jest": "^29.5.12",
+    "@types/cors": "2.8.17",
+    "@types/jest": "29.5.12",
     "@types/node": "18.19.50",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@typescript-eslint/utils": "^7.18.0",
-    "autoprefixer": "^10.4.20",
-    "cypress": "^13.14.2",
-    "esbuild": "^0.19.2",
-    "eslint": "~8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-cypress": "^3.5.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "~14.2.4",
+    "@types/passport-jwt": "4.0.1",
+    "@types/passport-local": "1.0.38",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "7.18.0",
+    "autoprefixer": "10.4.20",
+    "cypress": "13.14.2",
+    "esbuild": "0.19.2",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-cypress": "3.5.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-environment-node": "29.7.0",
+    "jest-preset-angular": "14.2.4",
     "nx": "19.7.2",
-    "postcss": "^8.4.45",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.11",
-    "ts-jest": "^29.2.5",
+    "postcss": "8.4.45",
+    "prettier": "3.3.3",
+    "tailwindcss": "3.4.11",
+    "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "~5.5.2",
-    "webpack-cli": "^5.1.4"
+    "typescript": "5.5.2",
+    "webpack-cli": "5.1.4"
   }
 }
