--- a/apps/webauthn-angular/project.json
+++ b/apps/webauthn-angular/project.json
@@ -27,6 +27,7 @@
           }
         ],
         "styles": [
+          "@angular/material/prebuilt-themes/azure-blue.css",
           "apps/webauthn-angular/src/styles.scss"
         ],
         "scripts": []
