--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cors": "2.8.5",
     "helmet": "7.1.0",
     "ioredis": "5.4.1",
+    "jwt-decode": "^4.0.0",
     "mysql2": "3.11.2",
     "nest-winston": "1.9.7",
     "passport-jwt": "4.0.1",
