--- a/apps/webauthn-angular/project.json
+++ b/apps/webauthn-angular/project.json
@@ -28,9 +28,13 @@
         ],
         "styles": [
           "@angular/material/prebuilt-themes/azure-blue.css",
-          "apps/webauthn-angular/src/styles.scss"
+          "apps/webauthn-angular/src/styles.scss",
+          "node_modules/prismjs/themes/prism-okaidia.css"
         ],
-        "scripts": []
+        "scripts": [
+          "node_modules/prismjs/prism.js",
+          "node_modules/prismjs/components/prism-json.js"
+        ]
       },
       "configurations": {
         "production": {
@@ -100,6 +104,9 @@
         "staticFilePath": "dist/apps/webauthn-angular/browser",
         "spa": true
       }
+    },
+    "deploy": {
+      "executor": "angular-cli-ghpages:deploy"
     }
   }
 }
