--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:affected": "nx affected -t lint",
     "test:affected": "nx affected -t test",
     "lint": "nx run-many -t lint",
-    "lint:fix": "nx run-many -t lint --fix"
+    "lint:fix": "nx run-many -t lint --fix",
+    "deploy:demo": "nx run webauthn-angular:deploy --baseHref=https://skyzerozx.github.io/webauthn-angular/ "
   },
   "private": true,
   "dependencies": {
@@ -37,6 +38,7 @@
     "@nx/angular": "19.7.2",
     "@simplewebauthn/browser": "10.0.0",
     "@simplewebauthn/server": "10.0.1",
+    "angular-cli-ghpages": "^2.0.1",
     "axios": "1.7.7",
     "bcryptjs": "2.4.3",
     "cache-manager": "5.7.6",
@@ -49,9 +51,11 @@
     "jwt-decode": "^4.0.0",
     "mysql2": "3.11.2",
     "nest-winston": "1.9.7",
+    "ngx-markdown": "^18.1.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "pg": "8.12.0",
+    "prismjs": "^1.28.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
     "tslib": "2.7.0",
