--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@nx/angular": "19.7.2",
     "@simplewebauthn/browser": "10.0.0",
     "@simplewebauthn/server": "10.0.1",
-    "angular-cli-ghpages": "^2.0.1",
+    "angular-cli-ghpages": "2.0.0",
     "axios": "1.7.7",
     "bcryptjs": "2.4.3",
     "cache-manager": "5.7.6",
