chore(webauthn-angular): Add barrel with alias to clean imports

--- a/apps/webauthn-angular/tsconfig.json
+++ b/apps/webauthn-angular/tsconfig.json
@@ -1,14 +1,22 @@
 {
   "compilerOptions": {
-    "target": "es2022",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": false,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
-  },
+		"target": "ES2022",
+		"resolveJsonModule": true,
+		"allowSyntheticDefaultImports": true,
+		"useDefineForClassFields": false,
+		"forceConsistentCasingInFileNames": true,
+		"strict": false,
+		"noImplicitOverride": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+		"baseUrl": ".",
+		"lib": ["ES2022", "dom", "DOM.Iterable"],
+		"paths": {
+			"@/*": ["src/app/*"],
+			"@skyzerozx/shared-interfaces": ["../../libs/shared-interfaces/src/index.ts"]
+		}
+	},
   "files": [],
   "include": [],
   "references": [
