--- a/.env.template
+++ b/.env.template
@@ -9,12 +9,12 @@ JWT_EXPIRE_TIME=200H
 WEB_AUTHN_RP_ID=localhost
 WEB_AUTHN_RP_NAME=Web Authentication
 WEB_AUTHN_RP_ID_ARRAY=["localhost" , "YOUR_DOMAIN"]
-WEB_AUTHN_ORIGIN=[ "http://localhost:3000" , "http://localhost:4200" ]
+WEB_AUTHN_ORIGIN=[ "http://localhost:3000" , "http://localhost:4200" , "http://localhost" ]
 WEB_AUTHN_NAME=WebAuthn Angular
 
  
 # DATABASE CONFIG
-DATABASE_HOST=localhost
+DATABASE_HOST=host.docker.internal
 DATABASE_PORT=5432
 DATABASE_NAME=postgres
 DATABASE_USERNAME=postgres
@@ -22,17 +22,17 @@ DATABASE_PASSWORD=postgres
 DATABASE_AUTO_LOAD_ENTITIES=true
 DATABASE_SYNCHRONIZE=true
 DATABASE_LOGGING=false
-DATABASE_SSL=true
+DATABASE_SSL=false # Change in case force SSL/TLS someone cloud service
 
 
 # CACHE CONFIG
-CACHE_HOST=localhost
+CACHE_HOST=host.docker.internal
 CACHE_NAME=default
 CACHE_USERNAME=default
-CACHE_PASSWORD=default
+CACHE_PASSWORD=root
 CACHE_PORT=6379
 CACHE_TTL=60000
-CACHE_TLS=true
+CACHE_TLS=false # Change in case force SSL/TLS someone cloud service
 
 
 #WINSTON CONFIG
@@ -48,4 +48,4 @@ LOGGER_DATE_PATTERN=YYYY-MM-DD
 LOGGER_ZIPPED_ARCHIVE=true
 LOGGER_WATCH_LOG=true
 LOGGER_MAX_SIZE=14d
-LOGGER_MAX_FILES=20m
+LOGGER_MAX_FILES=20mS
